// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sxtros6 {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxtros6or94y--size-sm {
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
}

.sxtros6-385xm {
  margin-right: var(--sx-space-2);
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sxgpjqn {
  color: var(--sx-colors-tonal800);
  font-family: var(--sx-fonts-body);
  font-weight: 400;
  margin: 0;
}

.sxgpjqn6tbwj--size-sm {
  font-size: var(--sx-fontSizes-sm);
  line-height: 1.53;
}

.sxgpjqn6tbwj--size-sm::before {
  content: '';
  margin-bottom: -0.4056em;
  display: table;
}

.sxgpjqn6tbwj--size-sm::after {
  content: '';
  margin-top: -0.4056em;
  display: table;
}

.sxgpjqn-lq7ir {
  color: var(--sx-colors-danger);
  display: flex;
  align-items: center;
  margin-top: var(--sx-space-2);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxojaks {
  box-shadow: none;
  font-size: var(--sx-fontSizes-md);
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-sizing: border-box;
  color: var(--sx-colors-tonal800);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sxojaks:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxojaks[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal600);
  cursor: not-allowed;
}

.sxojakshpnso--state-error {
  border: 1px solid var(--sx-colors-danger);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxojaks sxojakshpnso--state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <p
        class="sxgpjqn sxgpjqn6tbwj--size-sm sxgpjqn-lq7ir"
      >
        <svg
          aria-hidden="true"
          class="sxtros6 sxtros6or94y--size-sm sxtros6-385xm"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        This field is required
      </p>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxojaks {
  box-shadow: none;
  font-size: var(--sx-fontSizes-md);
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-sizing: border-box;
  color: var(--sx-colors-tonal800);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sxojaks:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxojaks[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal600);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxojaks"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-qom1k {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-3);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxojaks {
  box-shadow: none;
  font-size: var(--sx-fontSizes-md);
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-sizing: border-box;
  color: var(--sx-colors-tonal800);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  height: var(--sx-sizes-4);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sxojaks:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxojaks[disabled] {
  background-color: var(--sx-colors-tonal100);
  color: var(--sx-colors-tonal600);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-qom1k"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxojaks"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
